Ripping more stuff

--- a/Admin pages/statistics.html
+++ b/Admin pages/statistics.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Statistics - Bootstrap Admin Template</title>
+    <title>Donation Statistics</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -176,8 +176,7 @@
                 <!-- Flot Charts -->
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2 class="page-header">Flot Charts</h2>
-                        <p class="lead">Flot is a pure JavaScript plotting library for jQuery, with a focus on simple usage, attractive looks and interactive features. For full usage instructions and documentation for Flot Charts, visit <a href="http://www.flotcharts.org/">http://www.flotcharts.org/</a>.</p>
+                        <h2 class="page-header">Donations Over Time</h2>
                     </div>
                 </div>
                 <!-- /.row -->
@@ -186,7 +185,7 @@
                     <div class="col-lg-12">
                         <div class="panel panel-primary">
                             <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Line Graph Example with Tooltips</h3>
+                                <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Line Graph for Donations over one year</h3>
                             </div>
                             <div class="panel-body">
                                 <div class="flot-chart">
