--- a/user/settings.html
+++ b/user/settings.html
@@ -44,7 +44,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">Dashboard</a> <!--redirects back to home page-->
+        <a class="navbar-brand" href="index.html">Dashboard</a> <!--redirect's back to home page-->
     </div>
     <!-- Top Menu Items -->
     <ul class="nav navbar-right top-nav">
@@ -134,15 +134,15 @@
                 <li>
                     <a href="profile.html"><i class="fa fa-fw fa-user"></i> Profile</a>
                 </li>
-                <li>
-                    <a href="blank-page.html"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
-                </li>
+                <!-- <li>
+                 <a href="blank-page.html"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
+                 </li> -->
                 <li>
                     <a href="settings.html"><i class="fa fa-fw fa-gear"></i> Settings</a>
                 </li>
                 <li class="divider"></li>
                 <li>
-                    <a href="log-in.html"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                    <a href="login.html"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
                 </li>
             </ul>
         </li>
@@ -157,31 +157,17 @@
              <a href="charts.html"><i class="fa fa-fw fa-bar-chart-o"></i> Charts</a>
              </li>-->
             <li>
-                <a href="tables.html"><i class="fa fa-fw fa-table"></i> Contributions</a>
+                <a href="contributions.html"><i class="fa fa-fw fa-table"></i> Contributions</a>
             </li>
             <li>
                 <a href="settings.html"><i class="fa fa-fw fa-gear"></i> Settings</a>
             </li>
-            <!-- <li>
-             <a href="bootstrap-grid.html"><i class="fa fa-fw fa-wrench"></i> Bootstrap Grid</a>
-             </li>
-             <li>
-             <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> Dropdown <i class="fa fa-fw fa-caret-down"></i></a>
-             <ul id="demo" class="collapse">
-             <li>
-             <a href="#">Dropdown Item</a>
-             </li>
-             <li>
-             <a href="#">Dropdown Item</a>
-             </li>
-             </ul>
-             </li> -->
             <li>
-                <a href="blank-page.html"><i class="fa fa-fw fa-calendar"></i> Sales and Events</a>
+                <a href="feedback.html"><i class="fa fa-fw fa-desktop"></i> Feedback</a>
             </li>
-            <!-- <li>
-             <a href="index-rtl.html"><i class="fa fa-fw fa-dashboard"></i> RTL Dashboard</a>
-             </li> -->
+            <li>
+                <a href="events.html"><i class="fa fa-fw fa-calendar"></i> Sales and Events</a>
+            </li>
         </ul>
     </div>
     <!-- /.navbar-collapse -->
