--- a/user/contributions.html
+++ b/user/contributions.html
@@ -214,7 +214,7 @@
 
                 <div class="row">
                     <div class="col-lg-6">
-                        <h2>Donations This Month</h2>
+                        <h2>Recent Donations</h2>
                         <div class="table-responsive">
                             <table class="table table-bordered table-hover table-striped">
                                 <thead>
