Finishing touches to admin pages
Removed unnecessary pages, finally got stat page to work

--- a/Admin pages/Bar Chart.html
+++ b/Admin pages/Bar Chart.html
@@ -2,35 +2,34 @@
 <html lang="en">
 <head>
   <title>Sample Bar Chart</title>
-  <script src="Charts/Chart.js"></script>
+  <script src="../Charts/Chart.js"></script>
   <script type="text/javascript">
   function createChart() {
 
-    var data = {
-      labels: ["January", "February", "March", "April", "May", "June", "July"],
-      datasets: [
+    var data = [
         {
-          label: "Current time period",
-          fillColor: "rgba(0,59,149,0.6)",
-          strokeColor: "rgba(0,59,149,0.6)",
-          highlightFill: "rgba(0,59,149,0.6)",
-          highlightStroke: "rgba(0,59,149,1)",
-          data: [65, 59, 80, 81, 56, 55, 40]
+            value: 300,
+            color:"#F7464A",
+            highlight: "#FF5A5E",
+            label: "Red"
         },
         {
-          label: "Last time period",
-          fillColor: "rgba(0,59,149,0.2)",
-          strokeColor: "rgba(0,59,149,0.2)",
-          highlightFill: "rgba(0,59,149,0.2)",
-          highlightStroke: "rgba(0,59,149,1)",
-          data: [28, 48, 40, 19, 86, 27, 90]
+            value: 50,
+            color: "#46BFBD",
+            highlight: "#5AD3D1",
+            label: "Green"
+        },
+        {
+            value: 100,
+            color: "#FDB45C",
+            highlight: "#FFC870",
+            label: "Yellow"
         }
-      ]
-    };
+    ];
 
     var cht = document.getElementById('trChart');
     var ctx = cht.getContext('2d');
-    var lineChart = new Chart(ctx).Bar(data);
+    var lineChart = new Chart(ctx).Pie(data);
   }
   </script></head>
   <body onload="createChart();">
