--- a/Admin pages/Line Chart.html
+++ b/Admin pages/Line Chart.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <title>Sample Line Chart</title>
-  <script src="Charts/Chart.js"></script>
+  <script src="../Charts/Chart.js"></script>
   <script type="text/javascript">
-  function createChart() {
+  function createLineChart() {
 
     var data = {
       labels: ["January", "February", "March", "April", "May", "June", "July"],
