--- a/Admin pages/email.html
+++ b/Admin pages/email.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Email - Bootstrap Admin Template</title>
+    <title>Admin Email Page</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Email</a>
+                <a class="navbar-brand" href="dashboard.html">Email</a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
@@ -132,7 +132,7 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                   <li>
-                      <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+                      <a href="dashboard.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
                   </li>
                   <li>
                       <a href="statistics.html"><i class="fa fa-fw fa-bar-chart-o"></i>Statistics</a>
@@ -156,11 +156,11 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Email
+                            Email <small>Send emails to all members</small>
                         </h1>
                         <ol class="breadcrumb">
                             <li>
-                                <i class="fa fa-dashboard"></i>  <a href="index.html">Dashboard</a>
+                                <i class="fa fa-dashboard"></i>  <a href="dashboard.html">Dashboard</a>
                             </li>
                             <li class="active">
                                 <i class="fa fa-table"></i> Email
