--- a/Admin pages/feedback.html
+++ b/Admin pages/feedback.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Goodwill Site Admin - Bootstrap Admin Template</title>
+  <title>Goodwill Feedback</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -19,14 +19,6 @@
 
   <!-- Custom Fonts -->
   <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-  <![endif]-->
-
 </head>
 
 <body>
@@ -43,7 +35,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">Goodwill Site Admin</a>
+        <a class="navbar-brand" href="dashboard.html">Feedback</a>
       </div>
       <!-- Top Menu Items -->
       <ul class="nav navbar-right top-nav">
@@ -57,10 +49,8 @@
                     <img class="media-object" src="http://placehold.it/50x50" alt="">
                   </span>
                   <div class="media-body">
-                    <h5 class="media-heading"><strong>John Smith</strong>
+                    <h5 class="media-heading"><strong>Site Admin</strong>
                     </h5>
-                    <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
                   </div>
                 </div>
               </a>
@@ -72,10 +62,8 @@
                     <img class="media-object" src="http://placehold.it/50x50" alt="">
                   </span>
                   <div class="media-body">
-                    <h5 class="media-heading"><strong>John Smith</strong>
+                    <h5 class="media-heading"><strong>Site Admin</strong>
                     </h5>
-                    <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
                   </div>
                 </div>
               </a>
@@ -87,10 +75,8 @@
                     <img class="media-object" src="http://placehold.it/50x50" alt="">
                   </span>
                   <div class="media-body">
-                    <h5 class="media-heading"><strong>John Smith</strong>
+                    <h5 class="media-heading"><strong>Site Admin</strong>
                     </h5>
-                    <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
                   </div>
                 </div>
               </a>
@@ -110,7 +96,7 @@
           </ul>
         </li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Site Admin <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li>
               <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
@@ -131,8 +117,8 @@
       <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
       <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav side-nav">
-          <li class="active">
-            <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+          <li>
+            <a href="dashboard.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
           </li>
           <li>
             <a href="statistics.html"><i class="fa fa-fw fa-bar-chart-o"></i>Statistics</a>
@@ -157,14 +143,14 @@
         <div class="row">
           <div class="col-lg-12">
             <h1 class="page-header">
-              Tables
+              Feedback <small>Review feedback from donors and shoppers</small>
             </h1>
             <ol class="breadcrumb">
               <li>
-                <i class="fa fa-dashboard"></i>  <a href="index.html">Dashboard</a>
+                <i class="fa fa-dashboard"></i>  <a href="dashboard.html">Dashboard</a>
               </li>
               <li class="active">
-                <i class="fa fa-table"></i> Tables
+                <i class="fa fa-edit"></i> Feedback
               </li>
             </ol>
           </div>
